[package]
name = "tide-sample"
version = "0.1.0"
authors = ["niuchangqing <ncq1993@188.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = "1.0.124"
serde_json = "1.0"

anyhow = "1.0"
