[package]
name = "tide-sample"
version = "0.1.0"
authors = ["niuchangqing <ncq1993@188.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
#async-std = { version = "1.9.0", features = ["attributes"]}
async-std = { version = "1.9", features=["attributes", "tokio02", "tokio1"] }
serde = "1.0.124"
serde_json = "1.0"

#异常
anyhow = "1.0"

#rbatis
rbatis =  { version = "1.8"}
#log日志支持,rbatis需要
log = "0.4"
fast_log="1.3"
#全局
lazy_static = "1.4.0"


#日期工具
chrono = "0.4"